--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2476,7 +2476,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "331214e2",
+   "id": "0108ad13",
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b3a838a7",
+   "id": "74af3ec7",
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2523,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "392c65fd",
+   "id": "1d6aebd7",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "7c2b3f7b",
+   "id": "2bdb2543",
    "metadata": {},
    "outputs": [
     {
@@ -2573,7 +2573,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "81cc4166",
+   "id": "360a48c7",
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2596,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5f653d57",
+   "id": "39cbdb79",
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "14998a35",
+   "id": "7b4fc550",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "63ad6344",
+   "id": "bea6bc4b",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4291e845",
+   "id": "e862ff33",
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "2b350ec6",
+   "id": "bc625e2e",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "01da9156",
+   "id": "9bedaa67",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "71dc117d",
+   "id": "a4c74918",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3e73b849",
+   "id": "d3e72856",
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "b514f928",
+   "id": "4cd63b68",
    "metadata": {},
    "outputs": [
     {
@@ -3019,7 +3019,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "730ed489",
+   "id": "79063ad8",
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3058,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "ff4b0483",
+   "id": "1ab28806",
    "metadata": {},
    "outputs": [
     {
@@ -3096,7 +3096,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "3c3d145c",
+   "id": "ba3b2664",
    "metadata": {},
    "outputs": [
     {
@@ -3131,7 +3131,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1cb6b4bd",
+   "id": "61919fa7",
    "metadata": {},
    "outputs": [
     {
@@ -3364,7 +3364,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "39dbb4f5",
+   "id": "6eaf6ae8",
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3403,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3d58d14e",
+   "id": "77def488",
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3441,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "649aff69",
+   "id": "f4b12732",
    "metadata": {},
    "outputs": [
     {
@@ -3583,7 +3583,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "8c23e2b0",
+   "id": "bafe8168",
    "metadata": {},
    "outputs": [
     {
@@ -3724,7 +3724,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7b48e840",
+   "id": "87e11d69",
    "metadata": {},
    "outputs": [
     {
@@ -3763,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a63deb84",
+   "id": "77a2d02d",
    "metadata": {},
    "outputs": [
     {
@@ -3801,7 +3801,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "659b33a9",
+   "id": "ec906ecc",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a0a58470",
+   "id": "0830c242",
    "metadata": {},
    "outputs": [
     {
@@ -3876,7 +3876,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "6c2bab1b",
+   "id": "4e7de23b",
    "metadata": {},
    "outputs": [
     {
@@ -4019,7 +4019,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "78467bfd",
+   "id": "2c3d8620",
    "metadata": {},
    "outputs": [
     {
@@ -4058,7 +4058,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "df97bcc0",
+   "id": "8ad22ace",
    "metadata": {},
    "outputs": [
     {
@@ -4096,7 +4096,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "5e5f3cf9",
+   "id": "6a2a4417",
    "metadata": {},
    "outputs": [
     {
@@ -4250,7 +4250,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e142c055",
+   "id": "5086263b",
    "metadata": {},
    "outputs": [
     {
@@ -4288,7 +4288,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5e2fb311",
+   "id": "ba0b28b7",
    "metadata": {},
    "outputs": [
     {
@@ -4325,7 +4325,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "60b3c962",
+   "id": "9695d0d0",
    "metadata": {},
    "outputs": [
     {
@@ -4466,8 +4466,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "ca61a139",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "b00e06d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d5128e2e",
+   "id": "c0b4ab19",
    "metadata": {},
    "outputs": [],
    "source": []
