--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2476,7 +2476,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "82999a94",
+   "id": "b6cd4d5d",
    "metadata": {},
    "outputs": [
     {
@@ -2498,7 +2498,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "271f9269",
+   "id": "f24c2ba8",
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2523,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4ba2c9a6",
+   "id": "df5b6cdb",
    "metadata": {},
    "outputs": [
     {
@@ -2549,7 +2549,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "200a3954",
+   "id": "0c70e57a",
    "metadata": {},
    "outputs": [
     {
@@ -2573,7 +2573,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "66900ad8",
+   "id": "9bd16c5d",
    "metadata": {},
    "outputs": [
     {
@@ -2596,7 +2596,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "858b7a22",
+   "id": "74b50902",
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "90203065",
+   "id": "96b430fd",
    "metadata": {},
    "outputs": [
     {
@@ -2642,7 +2642,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "7d54619d",
+   "id": "3ac99a82",
    "metadata": {},
    "outputs": [
     {
@@ -2665,7 +2665,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d191450d",
+   "id": "a1faaaf5",
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2735,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ac9e052e",
+   "id": "3fc6ee93",
    "metadata": {},
    "outputs": [
     {
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9110bfa7",
+   "id": "6986b67f",
    "metadata": {},
    "outputs": [
     {
@@ -2904,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "21885845",
+   "id": "3f09b27b",
    "metadata": {},
    "outputs": [
     {
@@ -2942,7 +2942,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "d50090e5",
+   "id": "ffd57777",
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2981,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ecf0e822",
+   "id": "42a1f684",
    "metadata": {},
    "outputs": [
     {
@@ -3019,7 +3019,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "b15c03c6",
+   "id": "5e1baf97",
    "metadata": {},
    "outputs": [
     {
@@ -3058,7 +3058,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "c566c240",
+   "id": "b39746c9",
    "metadata": {},
    "outputs": [
     {
@@ -3096,7 +3096,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ab5724cb",
+   "id": "a8e669ea",
    "metadata": {},
    "outputs": [
     {
@@ -3131,7 +3131,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "9d0081f5",
+   "id": "9d945bde",
    "metadata": {},
    "outputs": [
     {
@@ -3364,7 +3364,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "0cd391ad",
+   "id": "c7245d82",
    "metadata": {},
    "outputs": [
     {
@@ -3403,7 +3403,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e582fe2f",
+   "id": "51eb06ef",
    "metadata": {},
    "outputs": [
     {
@@ -3441,7 +3441,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "f808039e",
+   "id": "aa0cb080",
    "metadata": {},
    "outputs": [
     {
@@ -3583,7 +3583,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c3a7163a",
+   "id": "0acc8ff8",
    "metadata": {},
    "outputs": [
     {
@@ -3724,7 +3724,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d8e2c5fe",
+   "id": "4c4e5957",
    "metadata": {},
    "outputs": [
     {
@@ -3763,7 +3763,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "0ff1bf38",
+   "id": "b6c7799d",
    "metadata": {},
    "outputs": [
     {
@@ -3801,7 +3801,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "5fcdfca2",
+   "id": "1fe8ef76",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7e797af6",
+   "id": "0c143da6",
    "metadata": {},
    "outputs": [
     {
@@ -3876,7 +3876,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9bb05a68",
+   "id": "1454f4a2",
    "metadata": {},
    "outputs": [
     {
@@ -4019,7 +4019,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2d81ea53",
+   "id": "57314f6b",
    "metadata": {},
    "outputs": [
     {
@@ -4058,7 +4058,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1c98bb1e",
+   "id": "9f34624a",
    "metadata": {},
    "outputs": [
     {
@@ -4096,7 +4096,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "534d6e94",
+   "id": "49fb5842",
    "metadata": {},
    "outputs": [
     {
@@ -4250,7 +4250,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "024b1da5",
+   "id": "e418b9a4",
    "metadata": {},
    "outputs": [
     {
@@ -4288,7 +4288,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3199d16f",
+   "id": "305550ce",
    "metadata": {},
    "outputs": [
     {
@@ -4325,7 +4325,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "4fbf210c",
+   "id": "434d5c8f",
    "metadata": {},
    "outputs": [
     {
@@ -4467,7 +4467,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "2b69b12f",
+   "id": "f3b894c5",
    "metadata": {},
    "outputs": [
     {
@@ -4612,7 +4612,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "0567273c",
+   "id": "f6232c46",
    "metadata": {},
    "outputs": [
     {
@@ -4757,7 +4757,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "09c705b9",
+   "id": "25f17ff9",
    "metadata": {},
    "outputs": [
     {
@@ -4899,7 +4899,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "c0e2a817",
+   "id": "d864c7e5",
    "metadata": {},
    "outputs": [
     {
@@ -5040,7 +5040,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "6643df68",
+   "id": "ac845960",
    "metadata": {},
    "outputs": [
     {
@@ -5181,7 +5181,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "89c5f523",
+   "id": "a514eb19",
    "metadata": {},
    "outputs": [
     {
@@ -5322,7 +5322,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "98f674a0",
+   "id": "39c276a2",
    "metadata": {},
    "outputs": [
     {
@@ -5361,7 +5361,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "680eb50a",
+   "id": "50d924b2",
    "metadata": {},
    "outputs": [
     {
@@ -5399,7 +5399,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "1509a3ff",
+   "id": "927c12a5",
    "metadata": {},
    "outputs": [
     {
@@ -5437,7 +5437,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "3d4e5fb7",
+   "id": "7a6c4b0d",
    "metadata": {},
    "outputs": [
     {
@@ -5475,7 +5475,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0f681ee0",
+   "id": "e45a0ac5",
    "metadata": {},
    "outputs": [
     {
@@ -5514,7 +5514,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "308d9a90",
+   "id": "57c00f45",
    "metadata": {},
    "outputs": [
     {
@@ -5552,7 +5552,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "435664f9",
+   "id": "c4da05e9",
    "metadata": {},
    "outputs": [
     {
@@ -5590,7 +5590,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "6891b8a8",
+   "id": "7a09b157",
    "metadata": {},
    "outputs": [
     {
@@ -5628,7 +5628,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "997e5377",
+   "id": "5e9de5b7",
    "metadata": {},
    "outputs": [
     {
@@ -5734,7 +5734,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "23158fa1",
+   "id": "b3e44e6b",
    "metadata": {},
    "outputs": [
     {
@@ -5840,7 +5840,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "daaf15c5",
+   "id": "e0c4dc9a",
    "metadata": {},
    "outputs": [
     {
@@ -5947,7 +5947,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "2749efb7",
+   "id": "224f2681",
    "metadata": {},
    "outputs": [
     {
@@ -6054,7 +6054,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "d918844e",
+   "id": "a5492feb",
    "metadata": {},
    "outputs": [
     {
@@ -6084,7 +6084,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "206575db",
+   "id": "565186e7",
    "metadata": {},
    "outputs": [
     {
@@ -6123,7 +6123,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "237cc461",
+   "id": "bbee9d38",
    "metadata": {},
    "outputs": [
     {
@@ -6162,7 +6162,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "964c0930",
+   "id": "ad3fcc0e",
    "metadata": {},
    "outputs": [
     {
@@ -6189,7 +6189,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "2ba1a2a8",
+   "id": "0f95e282",
    "metadata": {},
    "outputs": [
     {
@@ -6216,7 +6216,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1c45351f",
+   "id": "ce84073d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6228,7 +6228,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "3d6ce3c3",
+   "id": "4e363dac",
    "metadata": {},
    "outputs": [
     {
@@ -6385,7 +6385,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "d6c5c9f1",
+   "id": "2e7c366c",
    "metadata": {},
    "outputs": [
     {
@@ -6413,7 +6413,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "cc832744",
+   "id": "3d63a638",
    "metadata": {},
    "outputs": [
     {
@@ -6440,7 +6440,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "34ded439",
+   "id": "17a6e781",
    "metadata": {},
    "outputs": [
     {
@@ -6467,7 +6467,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "20a0d1f7",
+   "id": "72e50471",
    "metadata": {},
    "outputs": [
     {
@@ -6494,7 +6494,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1db35fd1",
+   "id": "5719bc5a",
    "metadata": {},
    "outputs": [
     {
@@ -6521,7 +6521,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "5e153ad7",
+   "id": "a3cd77dc",
    "metadata": {},
    "outputs": [
     {
@@ -6640,7 +6640,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c6330910",
+   "id": "9ce8556c",
    "metadata": {},
    "outputs": [
     {
@@ -6762,7 +6762,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "180bb6bd",
+   "id": "01bf57d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6774,7 +6774,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "23c7dea1",
+   "id": "6424e12c",
    "metadata": {},
    "outputs": [
     {
@@ -6938,7 +6938,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "13fa9454",
+   "id": "c91d0995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6957,7 +6957,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "2833da1c",
+   "id": "70c484d3",
    "metadata": {},
    "outputs": [
     {
@@ -7059,7 +7059,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "0f056526",
+   "id": "f6fc4ae0",
    "metadata": {},
    "outputs": [
     {
@@ -7163,8 +7163,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "3ed1bd21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate averages for the desired columns.\n",
+    "type_math_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Math Score\"]\n",
+    "\n",
+    "type_reading_scores = per_school_summary_df.groupby([\"School Type\"]).mean()[\"Average Reading Score\"]\n",
+    "\n",
+    "type_passing_math = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Math\"]\n",
+    "\n",
+    "type_passing_reading = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Passing Reading\"]\n",
+    "\n",
+    "type_overall_passing = per_school_summary_df.groupby([\"School Type\"]).mean()[\"% Overall Passing\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "ae8eb7ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.473852</td>\n",
+       "      <td>83.896421</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>76.956733</td>\n",
+       "      <td>80.966636</td>\n",
+       "      <td>66.548453</td>\n",
+       "      <td>80.799062</td>\n",
+       "      <td>53.672208</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
+       "School Type                                                              \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
+       "District              76.956733              80.966636       66.548453   \n",
+       "\n",
+       "             % Passing Reading  % Overall Passing  \n",
+       "School Type                                        \n",
+       "Charter              96.586489          90.432244  \n",
+       "District             80.799062          53.672208  "
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Assemble into DataFrame.\n",
+    "type_summary_df = pd.DataFrame({\n",
+    "          \"Average Math Score\" : type_math_scores,\n",
+    "          \"Average Reading Score\": type_reading_scores,\n",
+    "          \"% Passing Math\": type_passing_math,\n",
+    "          \"% Passing Reading\": type_passing_reading,\n",
+    "          \"% Overall Passing\": type_overall_passing})\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "0ac7ee12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Charter</th>\n",
+       "      <td>83.5</td>\n",
+       "      <td>83.9</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>District</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>67</td>\n",
+       "      <td>81</td>\n",
+       "      <td>54</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Average Math Score Average Reading Score % Passing Math  \\\n",
+       "School Type                                                           \n",
+       "Charter                   83.5                  83.9             94   \n",
+       "District                  77.0                  81.0             67   \n",
+       "\n",
+       "            % Passing Reading % Overall Passing  \n",
+       "School Type                                      \n",
+       "Charter                    97                90  \n",
+       "District                   81                54  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formatting\n",
+    "type_summary_df[\"Average Math Score\"] = type_summary_df[\"Average Math Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"Average Reading Score\"] = type_summary_df[\"Average Reading Score\"].map(\"{:.1f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Math\"] = type_summary_df[\"% Passing Math\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Passing Reading\"] = type_summary_df[\"% Passing Reading\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df[\"% Overall Passing\"] = type_summary_df[\"% Overall Passing\"].map(\"{:.0f}\".format)\n",
+    "\n",
+    "type_summary_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "373e1574",
+   "id": "bf868e1f",
    "metadata": {},
    "outputs": [],
    "source": []
